Make the appliaction more generic and universal.

--- a/KinveyMICOAuth2Test/index.html
+++ b/KinveyMICOAuth2Test/index.html
@@ -3,11 +3,17 @@
     <head>
         <script src="./index.js"></script>
         <script src="https://da189i1jfloii.cloudfront.net/js/kinvey-html5-sdk-3.11.6.min.js"></script>
-        <title>Kinvey MIC LinkedIn Authentication</title>
+        <title>Kinvey MIC Authentication</title>
     </head>
     <body>
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
-        <button id="Login" type="button" onclick="">Login with LinkedIn!</button>
+        <h1>Kinvey MIC Authentication Test App</h1>
+        <p>
+            You can use this application to test Kinvey MIC Authentication with different 
+            providers. LinkedIn or Facebook or ... 
+        </p>
+        <p>
+            To do so, you will need to change some settings on the index.js file.        
+        </p>
+        <button id="Login" type="button" onclick="">Login</button>
     </body>
 </html>
